Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.013 devel

****  Support '#' comments in $readmem, bug1411. [Frederick Requin]

****  Fix missing VL_SHIFTL_QQW error, bug1412. [Larry Lee]


* Verilator 4.012 2019-3-23

***   Add +verilator+seed, bug1396. [Stan Sokorac]

***   Support $fread.  [Leendert van Doorn]

***   Support void' cast on functions called as tasks, bug1383. [Al Grant]

***   Add IGNOREDRETURN warning, bug1383.

****  Report PORTSHORT errors on concat constants, bug 1400. [Will Korteland]

****  Fix VERILATOR_GDB being ignored, msg2860. [Yu Sheng Lin]

****  Fix $value$plus$args missing verilated_heavy.h. [Yi-Chung Chen]

****  Fix MSVC compile error, bug1406. [Benjamin Gartner]

****  Fix maintainer test when no Parallel::Forker, msg2630. [Enzo Chi]

****  Fix +1364-1995ext flags applying too late, bug1384. [Al Grant]


* Verilator 4.010 2019-01-27

***   Removed --trace-lxt2, use --trace-fst instead.

****  For --xml, add additional information, bug1372. [Jonathan Kimmitt]

****  Add circular typedef error, bug1388.  [Al Grant]

****  Add unsupported for loops error, msg2692. [Yu Sheng Lin]

****  Fix FST tracing of wide arrays, bug1376. [Aleksander Osman]

****  Fix error when pattern assignment has too few elements, bug1378. [Viktor Tomov]

****  Fix error when no modules in $unit, bug1381. [Al Grant]

****  Fix missing too many digits warning, bug1380. [Jonathan Kimmitt]

****  Fix uninitialized data in verFiles and unroller, bug1385. bug1386. [Al Grant]

****  Fix internal error on xrefs into unrolled functions, bug1387. [Al Grant]

****  Fix DPI export void compiler error, bug1391. [Stan Sokorac]


* Verilator 4.008 2018-12-01

***   Support "ref" and "const ref" pins and functions, bug1360. [Jake Longo]

***   In --xml-only show the original unmodified names, and add module_files
      and cells similar to Verilog-Perl, msg2719. [Kanad Kanhere]
